# NimbusU

./: DARK_MODE_FIX_AND_SHEET.md  generate_api_md.py  replace_colors.py
NimbusU-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  railway.toml  schema.yaml
NimbusU-backend/apps/academics/: models.py  serializers.py  urls.py  views.py
NimbusU-backend/apps/accounts/: models.py  serializers.py  urls.py  views.py
NimbusU-backend/apps/communications/: consumers.py  middleware.py  routing.py  signals.py  urls.py  views.py
NimbusU-backend/apps/content/: serializers.py  views.py
NimbusU-backend/apps/telemetry/: admin.py  apps.py  middleware.py  models.py  urls.py  views.py
NimbusU-backend/apps/timetable/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
NimbusU-backend/nimbusu/: asgi.py  pagination.py  settings.py  urls.py
backlog/: config.yml
backlog/tasks/: task-1 - Fix-the-timetable-month-view-show.md
docs/: API.md  academic_workflow.md  api-bridge.md  userflows.md
nimbusu-desktop/: .gitignore  Cargo.toml
nimbusu-desktop/src/: main.rs
nimbusu-frontend/: fix_academics.js  middleware.ts  package.json  proxy.ts  vercel.json
nimbusu-frontend/app/: globals.css  layout.tsx  page.tsx
nimbusu-frontend/components/: providers.tsx  settings-popup.tsx
nimbusu-frontend/hooks/: useChatSocket.ts  useNotificationSocket.ts  useTimetableSocket.ts
nimbusu-frontend/lib/: api.ts  auth.tsx  page-header.tsx  types.ts
nimbusu-frontend/public/: timetable-batch-import-demo.csv
nimbusu-frontend/services/: api.ts
(+79 files in other folders)
