[package]
name = "nimbusu-desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
